# ffass

./: .gitignore  CMakeLists.txt  README.md
app/include/: Brush.h  Particle.h  ParticleCanvas.h  ParticleLogic.h  ffass.h
app/include/core/: Particle.h  ParticleCanvas.h
app/source/: Brush.cpp  ParticleLogic.cpp  main.c  main.cpp
app/source/core/: ParticleCanvas.cpp
